examples/test/testpolicy12291.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12291
  namespace: namespace357
spec:
  podSelector:
    matchLabels:
      key36: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value8
          key20: value35
      podSelector:
        matchLabels:
          key2: value30
          key41: value36
